--- a/S01/SLU18 - Hyperparameter Tuning/Exercise notebook.ipynb
+++ b/S01/SLU18 - Hyperparameter Tuning/Exercise notebook.ipynb
@@ -497,10 +497,11 @@
     "# assign the gridsearch to the variable grid_search\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn import svm\n",
+    "\n",
     "estimator = svm.SVC()\n",
     "estimator.fit(X_train, y_train)  \n",
     "\n",
-    "grid_search = GridSearchCV(estimator, grid, cv=5, scoring=\"f1\")\n",
+    "grid_search = GridSearchCV(estimator, grid, scoring=\"f1\")\n",
     "\n",
     "# YOUR CODE HERE\n"
    ]
@@ -603,19 +604,7 @@
      "solution": false
     }
    },
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-10-a39bc1d4e73e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32massert\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbest_svm_model\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msvm\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSVC\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mbest_svm_params_hash\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mstudent_hash\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "best_svm_params_hash = 'cbd7c6909c12247feed2ba8eca28b5f606dffc16afd56860967250f6bcdf6440'\n",
     "student_hash = sha256(json.dumps(best_svm_model.get_params()).encode()).hexdigest()\n",
@@ -645,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -673,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -723,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -754,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -803,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -840,15 +829,12 @@
     "estimator = LogisticRegression(random_state=42, max_iter =10)\n",
     "estimator.fit(X_train, y_train)  \n",
     "\n",
-    "random_search = RandomizedSearchCV(estimator, random_grid, scoring='f1')\n",
-    "\n",
-    "random_search.fit(X_train, y_train)\n",
-    "y_pred = random_search.predict(X_test)"
+    "random_search = RandomizedSearchCV(estimator, random_grid, scoring='f1', random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -898,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -921,12 +907,13 @@
     "# Get the best model from the random search\n",
     "# Begin performing the random search over the train data\n",
     "# Then extract the best estimator and assign it to rs_best_model\n",
+    "random_search.fit(X_train, y_train)\n",
     "rs_best_model = random_search.best_estimator_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -942,7 +929,19 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-26-0ab020001dfc>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mrs_best_model_hash\u001b[0m \u001b[1;33m=\u001b[0m\u001b[1;34m'1caf8755ab22aca5c7d7cc25ec4d1671ea8155c7bbc81b56b7df67caad855913'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32massert\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrs_best_model\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlinear_model\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mLogisticRegression\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mrs_best_model_hash\u001b[0m\u001b[1;33m==\u001b[0m\u001b[0msha256\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mjson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdumps\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrs_best_model\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_params\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhexdigest\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "rs_best_model_hash ='1caf8755ab22aca5c7d7cc25ec4d1671ea8155c7bbc81b56b7df67caad855913'\n",
     "assert isinstance(rs_best_model, sklearn.linear_model.LogisticRegression)\n",
@@ -1018,6 +1017,13 @@
     "best_lr_params_hash = '5efd801ab7cf459907f1ea1ec19c91e894df790f91d14af609140bc8ce25dc18'\n",
     "assert best_lr_params_hash == sha256(json.dumps(best_lr_params).encode()).hexdigest() "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
